--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Когнитивные искажения nerealist</title>
-
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+
+  <header class="header">
+    <div class="container"></div>
+  </header>
+
+  <main class="main">
+
+    <section class="about">
+      <div class="container">
+
+      </div>
+    </section>
+
+    <section class="ikea-effect">
+      <div class="container">
+
+      </div>
+    </section>
+
+    <section class="premature-optimization">
+      <div class="container">
+
+      </div>
+    </section>
+
+    <section class="distortion-novelty">
+      <div class="container">
+
+      </div>
+    </section>
+
+    <section class="hyperbolic-depreciation">
+      <div class="container">
+
+      </div>
+    </section>
+
+    <section class="planning-error">
+      <div class="container">
+        
+      </div>
+    </section>
+
+  </main>
+
+  <footer class="footer">
+    <div class="container"></div>
+  </footer>
 
 </body>
 </html>
