styles header section

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,26 @@
 <body>
 
   <header class="header">
-    <div class="container"></div>
+    <div class="container">
+      <h1 class="header-title">
+        <span class="basic-color">Когнитивные<br>
+        искажения<br></span>
+        в программировании
+      </h1>
+      <div class="header-image">
+        <img src="src/images/main.png" alt="header-image">
+      </div>
+    <div class="header-description">
+      <div class="header-left-content">
+        <p class="header-left-description">Мы, разработчики, часто сталкиваемся с проблемами, которые идут вразрез с нашей продуктивностью. Но мы часто игнорируем целостную картину. Некоторые из этих проблем малозаметны, некоторые существенны. Иногда с ними можно как-то справиться, а иногда, к сожалению, нет.</p>
+      </div>
+      <div class="header-right-content">
+        <p class="header-right-description">Вместе они формируют что-то вроде замкнутого цикла, и это может привести к длительной потере продуктивности, багам и бесконечному разочарованию.</p>
+        <p>Если мы сможем минимизировать воздействие одного или нескольких из этих факторов, то сможем сломать и цикл, а остатки нейтрализовать.</p>
+        <a href="#" class="btn btn-header-more">Подробнее</a>
+      </div>
+    </div>
+  </div>
   </header>
 
   <main class="main">
@@ -48,7 +67,7 @@
 
     <section class="planning-error">
       <div class="container">
-        
+
       </div>
     </section>
 
