--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
         в программировании
       </h1>
       <div class="header-image">
-        <img src="images/main.png" alt="header-image">
+        <img src="/images/main.png" alt="header-image">
       </div>
     <div class="header-description">
       <div class="header-left-content">
