fix header-image position

--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,14 @@
 <body>
 
   <header class="header">
-    <div class="container">
+    <div class="container header-container">
       <h1 class="header-title">
         <span class="basic-color">Когнитивные<br>
         искажения<br></span>
         в программировании
       </h1>
       <div class="header-image">
-        <img src="/images/main.png" alt="header-image">
+        <img src="./images/main.png" alt="header-image">
       </div>
     <div class="header-description">
       <div class="header-left-content">
