--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-  <header class="header">
+  <header class="header  background-basic">
     <div class="container header-container">
       <h1 class="header-title">
         <span class="basic-color">Когнитивные<br>
