--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <header class="header  background-basic">
-    <div class="container header-container">
+    <div class="container">
       <h1 class="header-title">
         <span class="basic-color">Когнитивные<br>
         искажения<br></span>
