layout about section

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,13 @@
 
     <section class="about">
       <div class="container">
-
+        <div class="about-header">
+          <h2 class="about-title">Что же это такое,<br> <span class="basic-color">когнитивные искажения?</span></h2>
+          <p class="about-description">Что такое когнитивные искажения. Petrovna Channel</p>
+        </div>
+        <div class="about-video">
+          <iframe class="video" width="919" height="569" src="https://www.youtube.com/embed/jie9AizBqss" frameborder="0" allowfullscreen></iframe>
+        </div>
       </div>
     </section>
 
