add cognitive-biases section

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-  <header class="header  background-basic">
+  <header class="header background-basic">
     <div class="container">
       <h1 class="header-title">
         <span class="basic-color">Когнитивные<br>
@@ -18,7 +18,7 @@
         в программировании
       </h1>
       <div class="header-image">
-        <img src="./images/main.png" alt="header-image">
+        <img src="./images/main.png" height="525" alt="header-image">
       </div>
     <div class="header-description">
       <div class="header-left-content">
@@ -47,9 +47,57 @@
       </div>
     </section>
 
-    <section class="ikea-effect">
+    <section class="cognitive-biases">
       <div class="container">
+        <ul class="cognitive-biases-list" id="navigator">
+          <li class="cognitive-biases-item cognitive-biases-item-description">
+            <h3 class="cognitive-biases-list-description">
+              <span class="basic-color">5 когнитивных искажений<br></span> <span class="white-color">о существовании которых стоит помнить</span>
+            </h3>
+          </li>
+          <li class="cognitive-biases-item">
+            <a href="#" class="cognitive-biases-link">
+              <p class="cognitive-biases-item-count">1</p>
+              <h3 class="cognitive-biases-title">Эффект ИКЕА</h3>
+              <p class="cognitive-biases-description">Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
+            </a>
+          </li>
+          <li class="cognitive-biases-item">
+            <a href="#" class="cognitive-biases-link">
+              <p class="cognitive-biases-item-count">2</p>
+              <h3 class="cognitive-biases-title">Преждевременная оптимизация</h3>
+              <p class="cognitive-biases-description">Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
+            </a>
+          </li>
+          <li class="cognitive-biases-item">
+            <a href="#" class="cognitive-biases-link">
+              <p class="cognitive-biases-item-count">3</p>
+              <h3 class="cognitive-biases-title">Искажение новизны</h3>
+              <p class="cognitive-biases-description">Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</p>
+            </a>
+          </li>
+          <li class="cognitive-biases-item">
+            <a href="#" class="cognitive-biases-link">
+              <p class="cognitive-biases-item-count">4</p>
+              <h3 class="cognitive-biases-title">Гиперболическое обесценивание</h3>
+              <p class="cognitive-biases-description">Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</p>
+            </a>
+          </li>
+          <li class="cognitive-biases-item">
+            <a href="#" class="cognitive-biases-link">
+              <p class="cognitive-biases-item-count">5</p>
+              <h3 class="cognitive-biases-title">Ошибка планирования</h3>
+              <p class="cognitive-biases-description">Неправильно рассчитывать время необходимое для завершения задачи.</p>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </section>
 
+    <section class="ikea-effect background-basic" id="ikea-effect">
+      <div class="container">
+        <div class="ikea-effect-header"></div>
+        <div class="ikea-effect-description"></div>
       </div>
     </section>
 
