add ikea-effect section

--- a/src/index.html
+++ b/src/index.html
@@ -96,8 +96,21 @@
 
     <section class="ikea-effect background-basic" id="ikea-effect">
       <div class="container">
-        <div class="ikea-effect-header"></div>
-        <div class="ikea-effect-description"></div>
+        <div class="ikea-effect-header card-header">
+           <div class="ikea-effect-image card-image">
+            <img src="../src/images/1.png" alt="ikea-effect">
+          </div>
+          <div class="ikea-effect-title-block card-title-block">
+            <p class="card-pre-title ikea-effect-pre-title">Когнитивные искажения</p>
+            <h2 class="card-title">Эффект ИКЕА</h2>
+            <p class="card-title-description">Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
+          </div>
+        </div>
+        <p class="card-how-does-bias">Как проявляется</p>
+          <div class="card-description-container ikea-effect-description">
+            <p class="card-description card-description-left">Когнитивное искажение называется так из-за того, что потребители зачастую предпочитают покупать товары, которые они могут собрать сами, а не уже собранные кем-то.</p>
+            <p class="card-description card-description-right">Мы склонны переоцнивать наши собственные решения и недооценивать решения других. Если вы когда-то работали в компании, которая использовала тупой внутренний инструмент вместо более удобного готового решения, вы понимаете, о чём я говорю.</p>
+          </div>
       </div>
     </section>
 
