add premature-optimization section

--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,9 @@
   <header class="header background-basic">
     <div class="container">
       <h1 class="header-title">
-        <span class="basic-color">Когнитивные<br>
-        искажения<br></span>
-        в программировании
+        Когнитивные<br>
+        искажения<br>
+        <span class="dark-text">в программировании</span>
       </h1>
       <div class="header-image">
         <img src="./images/main.png" height="525" alt="header-image">
@@ -38,7 +38,7 @@
     <section class="about">
       <div class="container">
         <div class="about-header">
-          <h2 class="about-title">Что же это такое,<br> <span class="basic-color">когнитивные искажения?</span></h2>
+          <h2 class="about-title"><span class="dark-text">Что же это такое,</span><br>когнитивные искажения?</h2>
           <p class="about-description">Что такое когнитивные искажения. Petrovna Channel</p>
         </div>
         <div class="about-video">
@@ -98,15 +98,15 @@
       <div class="container">
         <div class="ikea-effect-header card-header">
            <div class="ikea-effect-image card-image">
-            <img src="../src/images/1.png" alt="ikea-effect">
+            <img src="../src/images/1.png" width="578" height="434" alt="ikea-effect-logo">
           </div>
           <div class="ikea-effect-title-block card-title-block">
             <p class="card-pre-title ikea-effect-pre-title">Когнитивные искажения</p>
-            <h2 class="card-title">Эффект ИКЕА</h2>
+            <h2 class="card-title dark-text">Эффект ИКЕА</h2>
             <p class="card-title-description">Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
           </div>
         </div>
-        <p class="card-how-does-bias">Как проявляется</p>
+        <h4 class="card-how-does-bias">Как проявляется</h4>
           <div class="card-description-container ikea-effect-description">
             <p class="card-description card-description-left">Когнитивное искажение называется так из-за того, что потребители зачастую предпочитают покупать товары, которые они могут собрать сами, а не уже собранные кем-то.</p>
             <p class="card-description card-description-right">Мы склонны переоцнивать наши собственные решения и недооценивать решения других. Если вы когда-то работали в компании, которая использовала тупой внутренний инструмент вместо более удобного готового решения, вы понимаете, о чём я говорю.</p>
@@ -114,13 +114,27 @@
       </div>
     </section>
 
-    <section class="premature-optimization">
+    <section class="premature-optimization background-basic card-white-text" id="premature-optimization">
       <div class="container">
-
+        <div class="premature-optimization-header card-header">
+          <div class="premature-optimization-title-block card-title-block">
+            <p class="card-pre-title premature-optimization-pre-title">Когнитивные искажения</p>
+            <h2 class="card-title white-text">Преждевременная оптимизация</h2>
+            <p class="card-title-description">Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
+          </div>
+          <div class="premature-optimization-image card-image">
+           <img src="../src/images/2.png" width="578" height="434" alt="premature-optimization-logo">
+         </div>
+       </div>
+       <h4 class="card-how-does-bias card-how-does-bias-premature-optimization">Как проявляется</h4>
+         <div class="card-description-container premature-optimization-description">
+           <p class="card-description card-description-left">Если вы добавите аэродинамический спойлер к своему старому автомобилю вместо ремонта мотора, то автомобиль не станет быстрее.</p>
+           <p class="card-description card-description-right card-description-right-premature-optimization">Отличный пример: писать максимально подтюненный и высокопроизводительный код для всего лишь экспериментального проекта.</p>
+         </div>
       </div>
     </section>
 
-    <section class="distortion-novelty">
+    <section class="distortion-of-novelty" id="distortion-of-novelty">
       <div class="container">
 
       </div>
