add distortion-of-novelty section

--- a/src/index.html
+++ b/src/index.html
@@ -134,9 +134,23 @@
       </div>
     </section>
 
-    <section class="distortion-of-novelty" id="distortion-of-novelty">
+    <section class="distortion-of-novelty background-basic" id="distortion-of-novelty">
       <div class="container">
-
+        <div class="distortion-of-novelty-header card-header">
+          <div class="distortion-of-novelty-image card-image">
+           <img src="../src/images/3.png" width="578" height="434" alt="distortion-of-novelty-logo">
+         </div>
+         <div class="distortion-of-novelty-title-block card-title-block">
+           <p class="card-pre-title distortion-of-novelty-pre-title">Когнитивные искажения</p>
+           <h2 class="card-title dark-text">Искажение новизны</h2>
+           <p class="card-title-description">Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</p>
+         </div>
+       </div>
+       <h4 class="card-how-does-bias">Как проявляется</h4>
+         <div class="card-description-container distortion-of-novelty-description">
+           <p class="card-description card-description-left card-description-left-distortion-of-novelty">Часто это искажение настигает нас, когда нужно решение проблемы и… о! Мы как раз только что решили подобную проблему! Давайте использовать это же решение, потому что оно сработало, и мы помним как!</p>
+           <p class="card-description card-description-right card-description-right-distortion-of-novelty">Вы замечаете, что пользуетесь теми же рабочими методиками раз за разом? Если да, возможно, вы смотрите на разные проблемы под одним и тем же углом.</p>
+         </div>
       </div>
     </section>
 
