add huperbolic-depreciation section

--- a/src/index.html
+++ b/src/index.html
@@ -154,9 +154,23 @@
       </div>
     </section>
 
-    <section class="hyperbolic-depreciation">
+    <section class="hyperbolic-depreciation background-basic card-white-text" id="hyperbolic-depreciation">
       <div class="container">
-
+        <div class="hyperbolic-depreciation-header card-header">
+          <div class="hyperbolic-depreciation-title-block card-title-block">
+            <p class="card-pre-title hyperbolic-depreciation-pre-title">Когнитивные искажения</p>
+            <h2 class="card-title white-text">Гиперболическое обесценивание</h2>
+            <p class="card-title-description hyperbolic-depreciation-card-title-description">Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</p>
+          </div>
+          <div class="hyperbolic-depreciation-image card-image">
+           <img src="../src/images/4.png" width="578" height="434" alt="hyperbolic-depreciation-logo">
+         </div>
+       </div>
+       <h4 class="card-how-does-bias card-how-does-bias-hyperbolic-depreciation">Как проявляется</h4>
+         <div class="card-description-container hyperbolic-depreciation-description">
+           <p class="card-description card-description-left">Вы когда-нибудь откладывали написание теста? Ловили себя на использовании клавиш-стрелок в Vim? Поздравляю, у вас наблюдается гиперболическое обесценивание.</p>
+           <p class="card-description card-description-right card-description-right-hyperbolic-depreciation">Немедленная выгода от использования чего-то быстродоступного значительно смягчает боль, которую нужно перетерпеть, чтобы усвоить правильный синтаксис для перемещения на нужную строчку. Но как только вы поймёте как перемещаться быстрее, выгода в будущем намного выше. В итоге вы сохраните много времени.</p>
+         </div>
       </div>
     </section>
 
