add errors-in-planing section

--- a/src/index.html
+++ b/src/index.html
@@ -94,10 +94,10 @@
       </div>
     </section>
 
-    <section class="ikea-effect background-basic" id="ikea-effect">
+    <section class="ikea-effect background-basic card card-light" id="ikea-effect">
       <div class="container">
-        <div class="ikea-effect-header card-header">
-           <div class="ikea-effect-image card-image">
+        <div class="card-header">
+           <div class="card-image">
             <img src="../src/images/1.png" width="578" height="434" alt="ikea-effect-logo">
           </div>
           <div class="ikea-effect-title-block card-title-block">
@@ -107,76 +107,91 @@
           </div>
         </div>
         <h4 class="card-how-does-bias">Как проявляется</h4>
-          <div class="card-description-container ikea-effect-description">
+          <div class="card-description-container">
             <p class="card-description card-description-left">Когнитивное искажение называется так из-за того, что потребители зачастую предпочитают покупать товары, которые они могут собрать сами, а не уже собранные кем-то.</p>
             <p class="card-description card-description-right">Мы склонны переоцнивать наши собственные решения и недооценивать решения других. Если вы когда-то работали в компании, которая использовала тупой внутренний инструмент вместо более удобного готового решения, вы понимаете, о чём я говорю.</p>
           </div>
       </div>
     </section>
 
-    <section class="premature-optimization background-basic card-white-text" id="premature-optimization">
+    <section class="premature-optimization background-basic white-text card card-dark" id="premature-optimization">
       <div class="container">
-        <div class="premature-optimization-header card-header">
-          <div class="premature-optimization-title-block card-title-block">
+        <div class="card-header">
+          <div class="card-title-block">
             <p class="card-pre-title premature-optimization-pre-title">Когнитивные искажения</p>
             <h2 class="card-title white-text">Преждевременная оптимизация</h2>
             <p class="card-title-description">Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
           </div>
-          <div class="premature-optimization-image card-image">
+          <div class="card-image">
            <img src="../src/images/2.png" width="578" height="434" alt="premature-optimization-logo">
          </div>
        </div>
-       <h4 class="card-how-does-bias card-how-does-bias-premature-optimization">Как проявляется</h4>
-         <div class="card-description-container premature-optimization-description">
+       <h4 class="card-how-does-bias card-how-does-bias-white">Как проявляется</h4>
+         <div class="card-description-container">
            <p class="card-description card-description-left">Если вы добавите аэродинамический спойлер к своему старому автомобилю вместо ремонта мотора, то автомобиль не станет быстрее.</p>
            <p class="card-description card-description-right card-description-right-premature-optimization">Отличный пример: писать максимально подтюненный и высокопроизводительный код для всего лишь экспериментального проекта.</p>
          </div>
       </div>
     </section>
 
-    <section class="distortion-of-novelty background-basic" id="distortion-of-novelty">
+    <section class="distortion-of-novelty background-basic card card-light" id="distortion-of-novelty">
       <div class="container">
-        <div class="distortion-of-novelty-header card-header">
-          <div class="distortion-of-novelty-image card-image">
+        <div class="card-header">
+          <div class="card-image">
            <img src="../src/images/3.png" width="578" height="434" alt="distortion-of-novelty-logo">
          </div>
          <div class="distortion-of-novelty-title-block card-title-block">
-           <p class="card-pre-title distortion-of-novelty-pre-title">Когнитивные искажения</p>
+           <p class="card-pre-title">Когнитивные искажения</p>
            <h2 class="card-title dark-text">Искажение новизны</h2>
            <p class="card-title-description">Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</p>
          </div>
        </div>
        <h4 class="card-how-does-bias">Как проявляется</h4>
-         <div class="card-description-container distortion-of-novelty-description">
+         <div class="card-description-container">
            <p class="card-description card-description-left card-description-left-distortion-of-novelty">Часто это искажение настигает нас, когда нужно решение проблемы и… о! Мы как раз только что решили подобную проблему! Давайте использовать это же решение, потому что оно сработало, и мы помним как!</p>
            <p class="card-description card-description-right card-description-right-distortion-of-novelty">Вы замечаете, что пользуетесь теми же рабочими методиками раз за разом? Если да, возможно, вы смотрите на разные проблемы под одним и тем же углом.</p>
          </div>
       </div>
     </section>
 
-    <section class="hyperbolic-depreciation background-basic card-white-text" id="hyperbolic-depreciation">
+    <section class="hyperbolic-depreciation background-basic white-text card card-dark" id="hyperbolic-depreciation">
       <div class="container">
-        <div class="hyperbolic-depreciation-header card-header">
-          <div class="hyperbolic-depreciation-title-block card-title-block">
-            <p class="card-pre-title hyperbolic-depreciation-pre-title">Когнитивные искажения</p>
+        <div class="card-header">
+          <div class="card-title-block">
+            <p class="card-pre-title">Когнитивные искажения</p>
             <h2 class="card-title white-text">Гиперболическое обесценивание</h2>
             <p class="card-title-description hyperbolic-depreciation-card-title-description">Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</p>
           </div>
-          <div class="hyperbolic-depreciation-image card-image">
+          <div class="card-image">
            <img src="../src/images/4.png" width="578" height="434" alt="hyperbolic-depreciation-logo">
          </div>
        </div>
-       <h4 class="card-how-does-bias card-how-does-bias-hyperbolic-depreciation">Как проявляется</h4>
-         <div class="card-description-container hyperbolic-depreciation-description">
+       <h4 class="card-how-does-bias card-how-does-bias-white">Как проявляется</h4>
+         <div class="card-description-container">
            <p class="card-description card-description-left">Вы когда-нибудь откладывали написание теста? Ловили себя на использовании клавиш-стрелок в Vim? Поздравляю, у вас наблюдается гиперболическое обесценивание.</p>
            <p class="card-description card-description-right card-description-right-hyperbolic-depreciation">Немедленная выгода от использования чего-то быстродоступного значительно смягчает боль, которую нужно перетерпеть, чтобы усвоить правильный синтаксис для перемещения на нужную строчку. Но как только вы поймёте как перемещаться быстрее, выгода в будущем намного выше. В итоге вы сохраните много времени.</p>
          </div>
       </div>
     </section>
 
-    <section class="planning-error">
+    <section class="errors-in-planning background-basic card card-light" id="errors-in-planning">
       <div class="container">
-
+        <div class="card-header">
+          <div class="card-image">
+           <img src="../src/images/5.png" width="578" height="434" alt="ikea-effect-logo">
+         </div>
+         <div class="ikea-effect-title-block card-title-block">
+           <p class="card-pre-title ikea-effect-pre-title">Когнитивные искажения</p>
+           <h2 class="card-title dark-text">Ошибка планирования</h2>
+           <p class="card-title-description">Неправильно рассчитывать время необходимое для завершения задачи.</p>
+         </div>
+       </div>
+       <h4 class="card-how-does-bias">Как проявляется</h4>
+         <div class="card-description-container">
+           <p class="card-description card-description-left errors-in-planning-card-description-left">Одно из искажений, которое должно признать большинство из нас. И менеджеры проекта, и сами пользователи продукта — все склонны ставить сроки, в которые невозможно закончить запланированное.</p>
+           <p class="card-description card-description-right">Это отлично выражается в старом афоризме:<br><br>
+            Первые 90% готового кода отнимают первые 90% времени разработки. Оставшиеся 10% отнимают вторые 90% времени разработки.</p>
+         </div>
       </div>
     </section>
 
