--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
       <div class="header-right-content">
         <p class="header-right-description">Вместе они формируют что-то вроде замкнутого цикла, и это может привести к длительной потере продуктивности, багам и бесконечному разочарованию.</p>
         <p>Если мы сможем минимизировать воздействие одного или нескольких из этих факторов, то сможем сломать и цикл, а остатки нейтрализовать.</p>
-        <a href="#" class="btn btn-header-more">Подробнее</a>
+        <a href="#navigation" class="btn btn-header-more">Подробнее</a>
       </div>
     </div>
   </div>
@@ -47,44 +47,44 @@
       </div>
     </section>
 
-    <section class="cognitive-biases">
+    <section class="cognitive-biases" id="navigation">
       <div class="container">
-        <ul class="cognitive-biases-list" id="navigator">
+        <ul class="cognitive-biases-list">
           <li class="cognitive-biases-item cognitive-biases-item-description">
             <h3 class="cognitive-biases-list-description">
               <span class="basic-color">5 когнитивных искажений<br></span> <span class="white-color">о существовании которых стоит помнить</span>
             </h3>
           </li>
           <li class="cognitive-biases-item">
-            <a href="#" class="cognitive-biases-link">
+            <a href="#ikea-effect" class="cognitive-biases-link">
               <p class="cognitive-biases-item-count">1</p>
               <h3 class="cognitive-biases-title">Эффект ИКЕА</h3>
               <p class="cognitive-biases-description">Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
             </a>
           </li>
           <li class="cognitive-biases-item">
-            <a href="#" class="cognitive-biases-link">
+            <a href="#premature-optimization" class="cognitive-biases-link">
               <p class="cognitive-biases-item-count">2</p>
               <h3 class="cognitive-biases-title">Преждевременная оптимизация</h3>
               <p class="cognitive-biases-description">Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
             </a>
           </li>
           <li class="cognitive-biases-item">
-            <a href="#" class="cognitive-biases-link">
+            <a href="#distortion-of-novelty" class="cognitive-biases-link">
               <p class="cognitive-biases-item-count">3</p>
               <h3 class="cognitive-biases-title">Искажение новизны</h3>
               <p class="cognitive-biases-description">Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</p>
             </a>
           </li>
           <li class="cognitive-biases-item">
-            <a href="#" class="cognitive-biases-link">
+            <a href="#hyperbolic-depreciation" class="cognitive-biases-link">
               <p class="cognitive-biases-item-count">4</p>
               <h3 class="cognitive-biases-title">Гиперболическое обесценивание</h3>
               <p class="cognitive-biases-description">Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</p>
             </a>
           </li>
           <li class="cognitive-biases-item">
-            <a href="#" class="cognitive-biases-link">
+            <a href="#errors-in-planning" class="cognitive-biases-link">
               <p class="cognitive-biases-item-count">5</p>
               <h3 class="cognitive-biases-title">Ошибка планирования</h3>
               <p class="cognitive-biases-description">Неправильно рассчитывать время необходимое для завершения задачи.</p>
@@ -198,7 +198,9 @@
   </main>
 
   <footer class="footer">
-    <div class="container"></div>
+    <div class="container">
+
+    </div>
   </footer>
 
 </body>
