--- a/src/index.html
+++ b/src/index.html
@@ -98,7 +98,7 @@
       <div class="container">
         <div class="card-header">
            <div class="card-image">
-            <img src="../src/images/1.png" width="578" height="434" alt="ikea-effect-logo">
+            <img src="./images/1.png" width="578" height="434" alt="ikea-effect-logo">
           </div>
           <div class="ikea-effect-title-block card-title-block">
             <p class="card-pre-title ikea-effect-pre-title">Когнитивные искажения</p>
@@ -123,7 +123,7 @@
             <p class="card-title-description">Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
           </div>
           <div class="card-image">
-           <img src="../src/images/2.png" width="578" height="434" alt="premature-optimization-logo">
+           <img src="./images/2.png" width="578" height="434" alt="premature-optimization-logo">
          </div>
        </div>
        <h4 class="card-how-does-bias card-how-does-bias-white">Как проявляется</h4>
@@ -138,7 +138,7 @@
       <div class="container">
         <div class="card-header">
           <div class="card-image">
-           <img src="../src/images/3.png" width="578" height="434" alt="distortion-of-novelty-logo">
+           <img src="./images/3.png" width="578" height="434" alt="distortion-of-novelty-logo">
          </div>
          <div class="distortion-of-novelty-title-block card-title-block">
            <p class="card-pre-title">Когнитивные искажения</p>
@@ -163,7 +163,7 @@
             <p class="card-title-description hyperbolic-depreciation-card-title-description">Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</p>
           </div>
           <div class="card-image">
-           <img src="../src/images/4.png" width="578" height="434" alt="hyperbolic-depreciation-logo">
+           <img src="./images/4.png" width="578" height="434" alt="hyperbolic-depreciation-logo">
          </div>
        </div>
        <h4 class="card-how-does-bias card-how-does-bias-white">Как проявляется</h4>
@@ -178,7 +178,7 @@
       <div class="container">
         <div class="card-header">
           <div class="card-image">
-           <img src="../src/images/5.png" width="578" height="434" alt="ikea-effect-logo">
+           <img src="./images/5.png" width="578" height="434" alt="ikea-effect-logo">
          </div>
          <div class="ikea-effect-title-block card-title-block">
            <p class="card-pre-title ikea-effect-pre-title">Когнитивные искажения</p>
