--- a/src/index.html
+++ b/src/index.html
@@ -199,7 +199,24 @@
 
   <footer class="footer">
     <div class="container">
-
+      <div class="form-block">
+        <div class="form-description">
+          <p class="form-description-text white-text">Хотите узнать больше?<br> Подпишитесь на обновления</p>
+        </div>
+        <form action="#" class="footer-form">
+          <label class="footer-form-label white-text" for="email">Электронная почта</label>
+          <p class="input-block">
+            <input type="email" name="email" class="footer-input-email" id="email" placeholder="Ваша электронная почта">
+            <button class="btn-submit-footer" type="submit"></button>
+          </p>
+          <p class="convention-description white-text">Подписываясь, вы принимаете <a href="#" class="convention-description-link white-text">правила сервиса</a></p>
+        </form>
+      </div>
+      <div class="contacts">
+        <p class="creator-name">&copy; 2021 Aleksandr Chusovitin</p>
+        <p class="materials-link">По материалам статьи <a href="https://medium.com/hackernoon/cognitive-biases-in-programming-5e937707c27b">Yash Ranadive Cognitive Biases in Programming</a></p>
+        <p class="hexlet-link"><a href="https://ru.hexlet.io">Курсы программирования Hexlet</a></p>
+      </div>
     </div>
   </footer>
 
