fix ikea-effect section

--- a/src/index.html
+++ b/src/index.html
@@ -109,7 +109,7 @@
         <h4 class="card-how-does-bias">Как проявляется</h4>
           <div class="card-description-container">
             <p class="card-description card-description-left">Когнитивное искажение называется так из-за того, что потребители зачастую предпочитают покупать товары, которые они могут собрать сами, а не уже собранные кем-то.</p>
-            <p class="card-description card-description-right">Мы склонны переоцнивать наши собственные решения и недооценивать решения других. Если вы когда-то работали в компании, которая использовала тупой внутренний инструмент вместо более удобного готового решения, вы понимаете, о чём я говорю.</p>
+            <p class="card-description card-description-right ikea-effect-card-description-right">Мы склонны переоцнивать наши собственные решения и недооценивать решения других. Если вы когда-то работали в компании, которая использовала тупой внутренний инструмент вместо более удобного готового решения, вы понимаете, о чём я говорю.</p>
           </div>
       </div>
     </section>
